# small-projects

./: data-sink.tar  extract.py
BufferedWriter/: README.md  build.sbt
FileAnalyzer/: Dockerfile  README.md  Technical Design - File Analyzer.drawio  api-docs.yaml  docker-compose.yml  pom.xml
gossip-protocol/: pom.xml
gossip-protocol/src/main/proto/: gossip.proto
jdbc-scaletester/: pom.xml
kvstore/: README.md  pom.xml
photo-focus/: photo-focus.py  pyproject.toml
podcast_transcripts/: out
podcast_transcripts/Unknown_Podcast/: Unknown_Podcast-Episode_1000453203998-2025-02-04.txt  Unknown_Podcast-Episode_1000473129856-2025-02-04.txt  Unknown_Podcast-Episode_1000514003401-2025-02-04.txt  Unknown_Podcast-Episode_1000536236150-2025-02-04.txt  Unknown_Podcast-Episode_1000539035062-2025-02-16.txt  Unknown_Podcast-Episode_1000540597924-2025-02-04.txt  Unknown_Podcast-Episode_1000552209066-2025-02-04.txt  Unknown_Podcast-Episode_1000552643704-2025-02-04.txt  Unknown_Podcast-Episode_1000617878810-2025-02-04.txt  Unknown_Podcast-Episode_1000623302356-2025-02-04.txt  (+94 more)
trading/: .gitignore  pyproject.toml  weekly_close.csv
trading/cache_parquet/: cache_metadata.json
trading/data_fetchers/: m2.py  m2_analysis.csv
trading/providers/: yahoo.py
trading/providers/finance_cache/: cache_metadata.json
trading/strategies/: longboard_asset_management.py  pranavs_strategy.py  pranavs_strategy_rebuilt.py  sma_200.py  us_market_scan_20250330.csv
udp_client_server/: .README.md.swp  README.md  UDPClient.java  UDPClientWithConnect.java  UDPServer.java
vmwkvstore/: pom.xml
(+92 files in other folders)
